add Inputs Components

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,3 +1,4 @@
+
 // rem
 html{
     font-size: 62.5%;
@@ -7,6 +8,7 @@ body{
     font-family: Montserrat,Arial, sans-serif;
      font-size: $m-size;
      background-color: $darck-blue;
+     color: white;
 }
 
  button{
